hphp/hack/test/typecheck/trait_reuse/trait_diamond_property_1.bad.php.exp
File "trait_diamond_property_1.bad.php", line 16, characters 7-13:
Class `MyClass` inherits generic trait property `myprop` via multiple traits.  Remove the multiple paths (Typing[4462])
  File "trait_diamond_property_1.bad.php", line 9, characters 10-11:
  Trait property is defined here
  File "trait_diamond_property_1.bad.php", line 18, characters 7-14:
  `MyClass` uses `MyTrait2`
  File "trait_diamond_property_1.bad.php", line 12, characters 7-19:
  `MyTrait2` uses `MyTrait1`
  File "trait_diamond_property_1.bad.php", line 17, characters 7-22:
  `MyClass` uses `MyTrait1`
